# mdarray-linalg

./: CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE.md  README.md
.github/workflows/: ci.yml
mdarray-linalg/: Cargo.toml  README.md
mdarray-linalg-blas/: Cargo.toml  README.md  build.rs
mdarray-linalg-blas/scripts/: cblas_sys.rs  gen_matmut.py  gen_matmut_scalar.py  gen_scalar.py  parse_blas_functions.py
mdarray-linalg-blas/scripts/templates/: matmul_simple.rs.j2  scalar.rs.j2
mdarray-linalg-blas/src/: context.rs  lib.rs
mdarray-linalg-blas/src/contract/: context.rs  scalar.rs  simple.rs
mdarray-linalg-blas/src/matmul/: context.rs  lib.rs  lib.rs~  mod.rs  scalar.rs  simple.rs
mdarray-linalg-blas/src/matvec/: context.rs  mod.rs  scalar.rs  simple.rs
mdarray-linalg-blas/src/tensordot/: context.rs  simple.rs
mdarray-linalg-blas/tests/: context.rs  contract.rs  matmul.rs  matvec.rs  tensordot.rs
mdarray-linalg-faer/: Cargo.toml  README.md
mdarray-linalg-faer/src/: contract.rs  eig.rs  lib.rs  matvec.rs  solve.rs
mdarray-linalg-faer/src/contract/: context.rs
mdarray-linalg-faer/src/eig/: context.rs
mdarray-linalg-faer/src/lu/: context.rs  simple.rs
mdarray-linalg-faer/src/matmul/: context.rs  mod.rs
mdarray-linalg-faer/src/matvec/: context.rs
mdarray-linalg-faer/src/qr/: context.rs  simple.rs
mdarray-linalg-faer/src/solve/: context.rs
mdarray-linalg-faer/src/svd/: context.rs  mod.rs  scalar.rs  simple.rs
mdarray-linalg-faer/tests/: contract.rs  eig.rs  lu.rs  matmul.rs  matvec.rs  qr.rs  solve.rs  svd.rs
mdarray-linalg-lapack/: Cargo.toml  README.md  build.rs
mdarray-linalg-lapack/src/: lib.rs
mdarray-linalg-lapack/src/eig/: context.rs  scalar.rs  simple.rs
mdarray-linalg-lapack/src/lu/: .#scalar.rs  context.rs  scalar.rs  simple.rs
mdarray-linalg-lapack/src/qr/: context.rs  mod.rs  scalar.rs  simple.rs
mdarray-linalg-lapack/src/solve/: context.rs  scalar.rs  simple.rs
mdarray-linalg-lapack/src/svd/: context.rs  mod.rs  scalar.rs  simple.rs
mdarray-linalg-lapack/tests/: eig.rs  lu.rs  qr.rs  solve.rs  svd.rs
mdarray-linalg-naive/: Cargo.toml
mdarray-linalg-naive/src/: lib.rs
mdarray-linalg-naive/src/matmul/: context.rs  simple.rs
mdarray-linalg-naive/src/matvec/: context.rs
mdarray-linalg-naive/src/prrlu/: context.rs  lib.rs  simple.rs
mdarray-linalg-naive/src/tensordot/: context.rs  simple.rs
mdarray-linalg-naive/tests/: matvec.rs  mod.rs  tensordot.rs
mdarray-linalg-nalgebra/: Cargo.toml  README.md
mdarray-linalg-nalgebra/src/: lib.rs  svd.rs
mdarray-linalg-nalgebra/src/contract/: context.rs  mod.rs  simple.rs
mdarray-linalg-nalgebra/src/eig/: context.rs  simple.rs
mdarray-linalg-nalgebra/src/lu/: context.rs  mod.rs  simple.rs
mdarray-linalg-nalgebra/src/matmul/: context.rs  simple.rs
mdarray-linalg-nalgebra/src/matvec/: context.rs  simple.rs
mdarray-linalg-nalgebra/src/qr/: context.rs  simple.rs
mdarray-linalg-nalgebra/src/solve/: context.rs  simple.rs
mdarray-linalg-nalgebra/src/svd/: context.rs  mod.rs  simple.rs
mdarray-linalg-nalgebra/tests/: contract.rs  eig.rs  lu.rs  matmul.rs  matvec.rs  qr.rs  solve.rs  svd.rs  tensordot.rs
mdarray-linalg-tblis/: Cargo.toml  build.rs
mdarray-linalg-tblis/src/: contract.rs  lib.rs
mdarray-linalg-tblis/src/contract/: context.rs
mdarray-linalg-tblis/src/matmul/: context.rs
mdarray-linalg-tblis/tests/: contract.rs  matmul.rs  mod.rs  tensordot.rs
mdarray-linalg-tests/: Cargo.toml
mdarray-linalg-tests/src/: lib.rs  mod.rs
mdarray-linalg-tests/src/common/: mod.rs
mdarray-linalg-tests/src/eig/: mod.rs
mdarray-linalg-tests/src/lu/: mod.rs
mdarray-linalg-tests/src/matmul/: mod.rs
mdarray-linalg-tests/src/matvec/: mod.rs
mdarray-linalg-tests/src/prrlu/: mod.rs
mdarray-linalg-tests/src/qr/: mod.rs
mdarray-linalg-tests/src/solve/: mod.rs
mdarray-linalg-tests/src/svd/: mod.rs
mdarray-linalg-tests/src/tensordot/: context.rs  mod.rs
mdarray-linalg-tests/tests/common/: mod.rs
mdarray-linalg-tests/tests/matvec/: context.rs
mdarray-linalg-tests/tests/prrlu/: context.rs
mdarray-linalg/benches/: small_matmul.rs  small_qr.rs  small_svd.rs
mdarray-linalg/examples/: library.rs  tool.rs
mdarray-linalg/src/: contract.rs  eig.rs  lib.rs  lu.rs  matmul.rs  matvec.rs  prelude.rs  prrlu.rs  qr.rs  solve.rs  svd.rs  tensordot.rs  utils.rs
mdarray-linalg/src/naive/: mod.rs
mdarray-linalg/src/naive/contract/: context.rs
mdarray-linalg/src/naive/matmul/: context.rs  simple.rs
mdarray-linalg/src/naive/matvec/: context.rs  simple.rs
mdarray-linalg/src/naive/prrlu/: context.rs  mod.rs
mdarray-linalg/src/naive/qr/: context.rs  simple.rs
mdarray-linalg/src/testing/: common.rs  contract.rs  eig.rs  lu.rs  matvec.rs  mod.rs  qr.rs  solve.rs  svd.rs
mdarray-linalg/src/testing/common/: mod.rs
mdarray-linalg/src/testing/contract/: mod.rs
mdarray-linalg/src/testing/eig/: mod.rs
mdarray-linalg/src/testing/lu/: mod.rs
mdarray-linalg/src/testing/matmul/: mod.rs
mdarray-linalg/src/testing/matvec/: mod.rs
mdarray-linalg/src/testing/prrlu/: mod.rs
mdarray-linalg/src/testing/qr/: mod.rs
mdarray-linalg/src/testing/solve/: mod.rs
mdarray-linalg/src/testing/svd/: mod.rs
mdarray-linalg/src/testing/tensordot/: mod.rs
mdarray-linalg/tests/: context.rs  contract.rs  matvec.rs  mod.rs  qr.rs  simple.rs  tensordot.rs  tests.rs
mdarray-linalg/tests/common/: mod.rs
mdarray-linalg/tests/eig/: context.rs
mdarray-linalg/tests/lu/: context.rs
mdarray-linalg/tests/matmul/: context.rs  simple.rs
mdarray-linalg/tests/matvec/: context.rs
mdarray-linalg/tests/prrlu/: context.rs
mdarray-linalg/tests/qr/: context.rs
mdarray-linalg/tests/solve/: context.rs
mdarray-linalg/tests/svd/: context.rs
mdarray-linalg/tests/tensordot/: context.rs
src/: blas_scalar.rs  context.rs  lib.rs  prelude.rs  simple.rs  traits.rs
src/blas/: context.rs  mod.rs
tests/: context.rs  simple.rs
