[workspace]
members = [
  "mdarray-linalg",
  "mdarray-linalg-naive",
  "mdarray-linalg-blas",
  "mdarray-linalg-lapack",
  "mdarray-linalg-faer",
]
resolver = "3"

[workspace.dependencies]
mdarray = { git = "https://github.com/fre-hu/mdarray.git", rev = "11ce08ae30bae2269c85eab1c4620028d160591a" }
