[workspace]
members = [
  "mdarray-linalg",
  "mdarray-linalg-blas",
  "mdarray-linalg-lapack",
  "mdarray-linalg-faer",
]
resolver = "3"

[workspace.dependencies]
approx = "0.5.1"
cblas-sys = "0.2.0"
dyn-stack = "0.13.0"
faer = "0.23.2"
faer-traits = "0.23.2"
itertools = "0.14.0"
lapack-src = { version = "0.11", features = ["openblas"] }
lapack-sys = "0.15.0"
mdarray = "0.7.1"
mdarray-linalg = { version = "0.1.1", path = "mdarray-linalg" }
num-complex = "0.4.6"
num-traits = "0.2.19"
num_cpus = "1.17.0"
openblas-src = { version = "0.10.11", features = ["system"] }
paste = "1.0.15"
rand = "0.9.2"
thiserror = "2.0.12"
