[package]
name = "mdarray-linalg-blas"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
mdarray-linalg = { version = "0.1.0", path = "../mdarray-linalg" }
cblas-sys = "0.2.0"
mdarray = "0.7.1"
num-complex = "0.4.6"
paste = "1.0.15"
num-traits = "0.2.19"

[dev-dependencies]
openblas-src = { version = "0.10.11", features = ["system"] }
