[package]
name = "mdarray-linalg-blas"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["linear-algebra", "tensor", "multidimensional", "BLAS", "scientific"]
description = "BLAS backend for mdarray-linalg library."
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
documentation = "https://docs.rs/mdarray-linalg"
build = "build.rs"

[dependencies]
mdarray-linalg = { version = "0.1.0", path = "../mdarray-linalg" }
cblas-sys = "0.2.0"
mdarray = "0.7.1"
num-complex = "0.4.6"
paste = "1.0.15"
num-traits = "0.2.19"

[dev-dependencies]
openblas-src = { version = "0.10.11", features = ["system"] }
mdarray-linalg-tests = { version = "0.1.0", path = "../mdarray-linalg-tests" }
