[package]
name = "mdarray-linalg-blas"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["linear-algebra", "tensor", "multidimensional", "BLAS", "scientific"]
description = "BLAS backend for mdarray-linalg library."
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
documentation = "https://docs.rs/mdarray-linalg"
build = "build.rs"

[dependencies]
cblas-sys.workspace = true
mdarray-linalg.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
paste.workspace = true

[dev-dependencies]
openblas-src.workspace = true
