[package]
name = "mdarray-linalg-faer"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["linear-algebra", "tensor", "multidimensional", "Faer", "scientific"]
description = "Faer backend for mdarray-linalg library."
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
documentation = "https://docs.rs/mdarray-linalg"

[dependencies]
mdarray-linalg = { version = "0.1.0", path = "../mdarray-linalg" }
cblas-sys = "0.2.0"
mdarray = "0.7.1"
num-complex = "0.4.6"
paste = "1.0.15"
thiserror = "2.0.12"
dyn-stack = "0.13.0"
num-traits = "0.2.19"
num_cpus = "1.17.0"
faer = "0.23.2"
faer-traits = "0.23.2"

[dev-dependencies]
mdarray-linalg-tests = { version = "0.1.0", path = "../mdarray-linalg-tests" }
