[package]
name = "mdarray-linalg-faer"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["linear-algebra", "tensor", "multidimensional", "Faer", "scientific"]
description = "Faer backend for mdarray-linalg"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
documentation = "https://docs.rs/mdarray-linalg"

[dependencies]
cblas-sys.workspace = true
dyn-stack.workspace = true
faer-traits.workspace = true
faer.workspace = true
mdarray-linalg.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
num_cpus.workspace = true
paste.workspace = true
thiserror.workspace = true
