[package]
name = "mdarray-linalg-lapack"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["mdarray", "linear-algebra", "math", "matrix", "lapack"]
description = "LAPACK backend for mdarray-linalg"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
build = "build.rs"

[dependencies]
cblas-sys.workspace = true
lapack-sys.workspace = true
mdarray-linalg.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
paste.workspace = true
thiserror.workspace = true

[dev-dependencies]
lapack-src.workspace = true
openblas-src.workspace = true
