[package]
name = "mdarray-linalg-naive"
version = "0.1.0"
edition = "2024"

[dependencies]
mdarray-linalg = { version = "0.1.0", path = "../mdarray-linalg" }
mdarray = { git = "https://github.com/fre-hu/mdarray.git", rev = "2a67f2ec7ed326fad9dc95a94f772b7e2140c8eb" }
num-complex = "0.4.6"
num-traits = "0.2.19"
