[package]
name = "mdarray-linalg-naive"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["linear-algebra", "tensor", "multidimensional", "textbook", "scientific"]
description = "Naive backend for mdarray-linalg library."
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
documentation = "https://docs.rs/mdarray-linalg"

[dependencies]
mdarray-linalg = { version = "0.1.0", path = "../mdarray-linalg" }
mdarray-linalg-tests = { version = "0.1.0", path = "../mdarray-linalg-tests" }
mdarray = "0.7.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
