[package]
name = "mdarray-linalg-nalgebra"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["mdarray", "linear-algebra", "math", "matrix", "nalgebra"]
description = "Nalgebra backend for mdarray-linalg"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]

[dependencies]
mdarray-linalg.workspace = true
mdarray.workspace = true
nalgebra.workspace = true
num-complex.workspace = true
num-traits.workspace = true
simba = "0.9.1"
