[package]
name = "mdarray-linalg-tblis"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["mdarray", "linear-algebra", "math", "matrix", "tblis"]
description = "TBLIS backend for mdarray-linalg"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]

[features]
tblis-tests = []

[dependencies]
mdarray-linalg.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
tblis.workspace = true

[[test]]
name = "matmul"
required-features = ["tblis-tests"]

[[test]]
name = "tensordot"
required-features = ["tblis-tests"]
