[package]
name = "mdarray-linalg"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/grothesque/mdarray-linalg"
license = "MIT AND Apache-2.0"
keywords = ["mdarray", "linear-algebra", "math", "matrix", "tensor"]
description = "Linear algebra operations for mdarray, with multiple exchangeable backends"
categories = ["mathematics", "science"]
authors = ["Pierre Wulles", "Christoph Groth"]
readme = "../README.md"

[dependencies]
approx.workspace = true
itertools.workspace = true
mdarray.workspace = true
num-complex.workspace = true
num-traits.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
lapack-src.workspace = true
openblas-src.workspace = true
mdarray-linalg-lapack = {path = "../mdarray-linalg-lapack"}
mdarray-linalg-blas = {path = "../mdarray-linalg-blas"}
mdarray-linalg-faer = {path = "../mdarray-linalg-faer"}
mdarray-linalg-nalgebra = {path = "../mdarray-linalg-nalgebra"}
nalgebra = "0.34.1"

[[bench]]
name = "small_matmul"
harness = false

[[bench]]
name = "small_svd"
harness = false

[[bench]]
name = "small_qr"
harness = false
